# CCSDSPack

./: .gitignore  CHANGELOG.md  CHANGE_LOG.md  CMakeLists.txt  Doxyfile  LICENSE  Notice.md  README.md  RELEASE_NOTES.md  V2_TRANSITION_ACCEPTANCE_LIST.md  V2_TRANSITION_ROADMAP.md  build_terminal.sh  clang-uml.yaml  install-aarch-cross-build-deps.sh  install-arm-none-cross-build-deps.sh  package.sh
.github/workflows/: ci.yml  debug-tests.yml  doxygen.yml  linux.yml  parser-diagnostic.yml  uml.yml  windows.yml
cmake/: CCSDSPackConfig.cmake.in  cpack.cmake  decoder.cmake  encoder.cmake  tester.cmake  validator.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  arm-none-eabi.cmake
docker/: .gitignore  Dockerfile  README.md  build_docker.sh
docs/: CCSDS_133_0_B_2_PROFILE.md  CCSDS_133_PROFILE.md  CCSDS_COMPLIANCE.md  CLI.md  CONFIG.md  CROSSBUILD.md  CROSSCOMPILE.md  ERROR.md  EXAMPLES.md  EXECUTABLES.md  FLOW.md  MISSION_TAILORING.md  PACKAGES.md  PRIV_HELPER.md  README.md  V1_2_CURRENT_BEHAVIOUR.md  ccsds_all.cmapx  ccsds_all.puml  ccsds_data_field.puml  ccsds_manager.puml  ccsds_packet.puml
docs/releases/: README.md  v1.2.0.md
html/: CCSDSConfig_8cpp.html  CCSDSConfig_8cpp__incl.map  CCSDSConfig_8cpp__incl.md5  CCSDSConfig_8cpp_source.html  CCSDSConfig_8h.html  CCSDSConfig_8h__dep__incl.map  CCSDSConfig_8h__dep__incl.md5  CCSDSConfig_8h__incl.map  CCSDSConfig_8h__incl.md5  CCSDSConfig_8h_source.html  CCSDSDataField_8cpp.html  CCSDSDataField_8cpp__incl.map  CCSDSDataField_8cpp__incl.md5  CCSDSDataField_8cpp_source.html  CCSDSDataField_8h.html  CCSDSDataField_8h__dep__incl.map  CCSDSDataField_8h__dep__incl.md5  CCSDSDataField_8h__incl.map  CCSDSDataField_8h__incl.md5  CCSDSDataField_8h_source.html  CCSDSHeader_8cpp.html  CCSDSHeader_8cpp__incl.map  CCSDSHeader_8cpp__incl.md5  CCSDSHeader_8cpp_source.html  CCSDSHeader_8h.html  CCSDSHeader_8h__dep__incl.map  CCSDSHeader_8h__dep__incl.md5  CCSDSHeader_8h__incl.map  CCSDSHeader_8h__incl.md5  CCSDSHeader_8h_source.html  CCSDSManager_8cpp.html  CCSDSManager_8cpp__incl.map  CCSDSManager_8cpp__incl.md5  CCSDSManager_8cpp_source.html  CCSDSManager_8h.html  CCSDSManager_8h__dep__incl.map  CCSDSManager_8h__dep__incl.md5  CCSDSManager_8h__incl.map  CCSDSManager_8h__incl.md5  CCSDSManager_8h_source.html  (+565 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+41 more)
inc/: CCSDSConfig.h  CCSDSData.h  CCSDSDataField.h  CCSDSHeader.h  CCSDSManager.h  CCSDSMissionProfile.h  CCSDSPack.h  CCSDSPacket.h  CCSDSResult.h  CCSDSSecondaryHeader.h  CCSDSSecondaryHeaderAbstract.h  CCSDSSecondaryHeaderFactory.h  CCSDSUtils.h  CCSDSV2MissionProfile.h  CCSDSValidator.h  PUSService.h  PusServices.h  exec_utils.h
lib/: .gitignore
src/: CCSDSConfig.cpp  CCSDSData.cpp  CCSDSDataField.cpp  CCSDSHeader.cpp  CCSDSManager.cpp  CCSDSPack.cpp  CCSDSPacket.cpp  CCSDSSecondaryHeader.cpp  CCSDSUtils.cpp  CCSDSValidator.cpp  PUSService.cpp  PusServices.cpp  exec_decoder.cpp  exec_encoder.cpp  exec_utils.cpp  exec_validator.cpp
test/: CCSDSPack_test.cpp  cli_integration.py
test/inc/: TestManager.h  tests.h
test/package_tester/: aarch64_validate.sh  package_test.sh
test/package_tester/shared_lib/: CMakeLists.txt
test/package_tester/shared_lib/src/: main.cpp
test/package_tester/src/: main.cpp
test/package_tester/stm32h7xx/: .project  H755_INTEGRATION.md  readme.txt
test/package_tester/stm32h7xx/CM7/Inc/: ccsdspack_mcu_test.h
test/package_tester/stm32h7xx/CM7/Src/: ccsdspack_mcu_compile_probe.cpp  main.cpp
test/package_tester/stm32h7xx/STM32CubeIDE/CM4/: .cproject  .project
test/package_tester/stm32h7xx/STM32CubeIDE/CM4/Debug/: compile_commands.json  makefile  objects.list  sources.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM4/Debug/Drivers/BSP/STM32H745I_Nucleo/: subdir.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM4/Debug/Drivers/CMSIS/: subdir.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM4/Debug/Drivers/STM32H7xx_HAL_Driver/: subdir.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM4/Debug/Example/User/CM4/: subdir.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM4/Debug/Example/User/Startup/: subdir.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM7/: .cproject  .project  UART_WakeUpFromStopUsingFIFO_CM7.launch
test/package_tester/stm32h7xx/STM32CubeIDE/CM7/Debug/: compile_commands.json  makefile  objects.list  objects.mk  sources.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM7/Debug/Drivers/BSP/STM32H745I_Nucleo/: subdir.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM7/Debug/Drivers/CMSIS/: subdir.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM7/Debug/Drivers/STM32H7xx_HAL_Driver/: subdir.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM7/Debug/Example/User/CM7/: subdir.mk
test/package_tester/stm32h7xx/STM32CubeIDE/CM7/Debug/Example/User/Startup/: subdir.mk
test/reference/: generate_ccsds_vectors.py
test/resources/: config.cfg  pusA.cfg  pusB.cfg  pusC.cfg  templatePacket.cfg  test_config.cfg
test/src/: TestManager.cpp  testGroupBasic.cpp  testGroupConformance.cpp  testGroupCore.cpp  testGroupEdgeCases.cpp  testGroupManagement.cpp  testGroupParsing.cpp  testGroupValidator.cpp  testMain.cpp
test/test_resources/: ccsds_golden_apid_0123_seq_0123_crc16.hex  ccsds_golden_custom_secondary_crc16.hex  ccsds_golden_minimum_crc16.hex  ccsds_golden_no_crc.hex  ccsds_golden_no_secondary_crc16.hex  ccsds_golden_rollover_concat_crc16.hex  pusA.cfg  pusC.cfg  templatePacket.cfg  test_config.cfg
